docs: nowrap code & h scroll bar

--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -5,7 +5,7 @@
 @layer components {
   .live-editor {
     .prism-code {
-      @apply px-6 py-5 rounded-b-lg !important;
+      @apply px-6 py-5 rounded-b-lg whitespace-nowrap overflow-auto !important;
     }
   }
 }
