--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -46,6 +46,26 @@
   h6.nd-title {
     @apply text-[length:var(--nd-font-size-lg)] leading-[var(--nd-line-height-lg)];
   }
+
+  .nd-link {
+    color: var(--nd-color-primary);
+
+    &:hover {
+      color: var(--nd-color-primary-hover);
+    }
+
+    &:active {
+      color: var(--nd-color-primary-active);
+    }
+
+    &.nd-underline {
+      text-decoration-line: underline;
+    }
+
+    &.nd-no-underline {
+      text-decoration-line: none;
+    }
+  }
 }
 
 .dark {
