--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -24,6 +24,13 @@
   }
 }
 
+:root {
+  --vp-c-bg: light-dark(var(--nd-color-primary-0), var(--nd-color-primary-5));
+  --vp-c-bg-alt: light-dark(var(--nd-color-primary-5), var(--nd-color-primary-0));
+  --vp-c-text-1: var(--text-color-primary);
+  --vp-c-text-2: var(--text-color-secondary);
+}
+
 .VPImage.logo {
   --vp-nav-logo-height: 32px;
 }
