perf(components): change the default transition duration from 150ms to 200ms

--- a/packages/components/src/tailwind.css
+++ b/packages/components/src/tailwind.css
@@ -65,6 +65,8 @@
   --radius-sm: 0.125rem;
   --radius-md: 0.25rem;
   --radius-lg: 0.375rem;
+
+  --default-transition-duration: 200ms;
 }
 
 @utility underline {
