--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -29,6 +29,8 @@
   --vp-c-bg-alt: light-dark(var(--nd-color-primary-10), var(--nd-color-primary-0));
   --vp-c-text-1: var(--text-color-primary);
   --vp-c-text-2: var(--text-color-secondary);
+
+  --vp-font-family-base: --font-nd;
 }
 
 .VPImage.logo {
