--- a/packages/components/src/tailwind.css
+++ b/packages/components/src/tailwind.css
@@ -38,13 +38,13 @@
   --color-split: var(--nd-color-primary-20);
   --color-edge: var(--nd-color-primary-30);
 
+  --background-color-container: light-dark(var(--nd-color-primary-0), var(--nd-color-primary-5));
+
   --text-color-primary: var(--nd-color-primary-100);
   --text-color-secondary: var(--nd-color-primary-60);
   --text-color-link: var(--color-primary);
   --text-color-link-hover: var(--color-primary-hover);
   --text-color-link-active: var(--color-primary-active);
-
-  --background-color-container: light-dark(var(--nd-color-primary-0), var(--nd-color-primary-5));
 
   --text-sm: 0.75rem;
   --text-sm--line-height: 1.25rem;
@@ -66,6 +66,10 @@
   --radius-sm: 0.125rem;
   --radius-md: 0.25rem;
   --radius-lg: 0.375rem;
+
+  --font-nd:
+    -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, 'Helvetica Neue', arial, 'Noto Sans', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 
   --default-transition-duration: 200ms;
 }
