perf(components): font metrics

--- a/packages/components/src/tailwind.css
+++ b/packages/components/src/tailwind.css
@@ -46,22 +46,24 @@
   --text-color-link-hover: var(--color-primary-hover);
   --text-color-link-active: var(--color-primary-active);
 
-  --text-sm: 0.75rem;
+  --text-sm: 0.75rem; /* 12px */
   --text-sm--line-height: 1.25rem;
-  --text-md: 0.875rem;
+  --text-md: 0.875rem; /* 14px */
   --text-md--line-height: 1.375rem;
-  --text-lg: 1rem;
+  --text-lg: 1rem; /* 16px */
   --text-lg--line-height: 1.5rem;
-  --text-xl: 1.25rem;
-  --text-xl--line-height: 1.75rem;
-  --text-2xl: 1.5rem;
-  --text-2xl--line-height: 2rem;
-  --text-3xl: 1.875rem;
-  --text-3xl--line-height: 2.375rem;
-  --text-4xl: 2.375rem;
-  --text-4xl--line-height: 2.875rem;
-  --text-5xl: 2.875rem;
-  --text-5xl--line-height: 3.375rem;
+  --text-xl: 1.125rem; /* 18px */
+  --text-xl--line-height: 1.625rem;
+  --text-2xl: 1.25rem; /* 20px */
+  --text-2xl--line-height: 1.75rem;
+  --text-3xl: 1.5rem; /* 24px */
+  --text-3xl--line-height: 2rem;
+  --text-4xl: 1.875rem; /* 30px */
+  --text-4xl--line-height: 2.375rem;
+  --text-5xl: 2.375rem; /* 38px */
+  --text-5xl--line-height: 2.875rem;
+  --text-6xl: 2.875rem; /* 46px */
+  --text-6xl--line-height: 3.375rem;
 
   --radius-sm: 0.125rem;
   --radius-md: 0.25rem;
