--- a/packages/components/src/tailwind.css
+++ b/packages/components/src/tailwind.css
@@ -81,6 +81,10 @@
   text-underline-offset: 0.125rem;
 }
 
+@utility r-* {
+  r: --value(number);
+}
+
 @custom-variant disabled {
   &.disabled,
   &:disabled {
